# wireguard-gui

./: .gitignore  Cargo.toml  README.md  io.github.wireguard_gui.json
.cursor/: hooks.json
.cursor/hooks/: auto-sync.sh
.flatpak-builder/cache/refs/heads/x86_64-io.github.wireguard_gui.json/: build-wireguard-gui  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-io.github.wireguard_gui.json
crates/wireguard-gui/: Cargo.toml
crates/wireguard-gui-common/: Cargo.toml
crates/wireguard-gui-common/src/: lib.rs  wg_conf.rs  wg_dump.rs
crates/wireguard-gui-helper/: Cargo.toml
crates/wireguard-gui-helper/src/: main.rs
crates/wireguard-gui/src/: main.rs
data/polkit/: 30-wireguard-gui.rules  README.md
scripts/: build-deb.sh  release.sh
scripts/.flatpak-builder/cache/refs/heads/x86_64-io.github.wireguard_gui.json/: build-wireguard-gui  init
scripts/.flatpak-builder/checksums/: x86_64-io.github.wireguard_gui.json
