[package]
name = "wireguard-gui-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wireguard-gui-helper"
path = "src/main.rs"

[dependencies]
wireguard-gui-common = { path = "../wireguard-gui-common" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
